Add WebSocket chapter, ending, more citations and missing commas

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,31 @@
 % Encoding: UTF-8
 
+@inproceedings{wasm,
+  title     = {Bringing the web up to speed with WebAssembly},
+  author    = {Haas, Andreas and Rossberg, Andreas and Schuff, Derek L and Titzer, Ben L and Holman, Michael and Gohman, Dan and Wagner, Luke and Zakai, Alon and Bastien, JF},
+  booktitle = {Proceedings of the 38th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  pages     = {185--200},
+  year      = {2017}
+}
+
+@incollection{wasm_yew,
+  title     = {High-Performance Web Frontend Using WebAssembly},
+  author    = {Lyu, Shing},
+  booktitle = {Practical Rust Web Projects},
+  pages     = {193--249},
+  year      = {2021},
+  publisher = {Springer}
+}
+
+@inproceedings{wasm_energy,
+  title        = {WebAssembly versus JavaScript: Energy and Runtime Performance},
+  author       = {De Macedo, Jo{\~a}o and Abreu, Rui and Pereira, Rui and Saraiva, Joao},
+  booktitle    = {2022 International Conference on ICT for Sustainability (ICT4S)},
+  pages        = {24--34},
+  year         = {2022},
+  organization = {IEEE}
+}
+
 @article{wasm_blazor,
   author  = {Suryś, Dawid and Szłapa, Piotr and Skublewska-Paszkowska, Maria},
   year    = {2019},
@@ -75,6 +101,52 @@
   author    = {Juslenius, Santeri and others},
   year      = {2021},
   publisher = {Helsingin yliopisto}
+}
+
+@article{websocket_realtime,
+  title   = {WebSocket in real time application},
+  author  = {Ogundeyi, KE and Yinka-Banjo, C},
+  journal = {Nigerian Journal of Technology},
+  volume  = {38},
+  number  = {4},
+  pages   = {1010--1020},
+  year    = {2019}
+}
+
+@article{webrtc_signaling,
+  title   = {Prosty serwer sygnalizacyjny dla techniki WebRTC z wykorzystaniem {\'s}rodowiska uruchomieniowego node. js},
+  author  = {Chodorek, Agnieszka and Chodorek, Robert R},
+  journal = {Autobusy: technika, eksploatacja, systemy transportowe},
+  volume  = {19},
+  year    = {2018}
+}
+
+@article{webrtc_latency,
+  title  = {Latency contributors in WebRTC-based remote control system},
+  author = {Tanskanen, Sakari and others},
+  year   = {2021}
+}
+
+@article{websocket_sensor,
+  title     = {Communicating and displaying real-time data with websocket},
+  author    = {Pimentel, Victoria and Nickerson, Bradford G},
+  journal   = {IEEE Internet Computing},
+  volume    = {16},
+  number    = {4},
+  pages     = {45--53},
+  year      = {2012},
+  publisher = {IEEE}
+}
+
+@article{websocket_monitoring,
+  title     = {Introducing browser--based high--frequency cloud monitoring system using WebSocket proxy},
+  author    = {Ma, Kun and Zhang, Weijuan},
+  journal   = {International Journal of Grid and Utility Computing},
+  volume    = {6},
+  number    = {1},
+  pages     = {21--29},
+  year      = {2015},
+  publisher = {Inderscience Publishers}
 }
 
 @incollection{telesurgery,
